log
Thu, Mar 27, 2025 10:02:11 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 10:07:59 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'createList':
list.c:32:38: error: 'Lista' undeclared (first use in this function); did you mean 'List'?
   32 |     List* L = (List *) malloc(sizeof(Lista));
      |                                      ^~~~~
      |                                      List
list.c:32:38: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0ac0efa
Thu, Mar 27, 2025 10:08:21 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cc912ab
Thu, Mar 27, 2025 10:15:34 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
e95b2ca
Thu, Mar 27, 2025 10:16:49 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
500ad19
Thu, Mar 27, 2025 10:17:54 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
57a7b15
Thu, Mar 27, 2025 10:22:14 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
54a3c3f
Thu, Mar 27, 2025 10:24:31 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
6c7346d
Thu, Mar 27, 2025 10:26:52 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5741bcb
Thu, Mar 27, 2025 10:28:06 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f62c9d5
